Mise à jour avec de nouvelles pages

--- a/videos/chroniques.html
+++ b/videos/chroniques.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/nav-bar.css">
+    <link rel="stylesheet" href="../css/footer.css">
   </head>
 
   <body>
@@ -15,8 +17,8 @@
       <h2>Loïc Maldonado et Lison Talagrand (2010)</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/uAjyx2ZXMQk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p class="film-prez">Un film double construit autour de deux destins qui ne sont plus liés.</p>
-      <p>Dans ce court-métrage, réalisé par <strong><a href="https://www.imdb.com/name/nm8096944/" target="_blank" title="Loïc Maldonado sur IMDb">
-        Loïc Maldonado</a></strong> et <strong>Lison Talagrand</strong> dans le cadre de leurs études
+      <p class="film-prez">Dans ce court-métrage, réalisé par <strong><a href="https://www.imdb.com/name/nm8096944/" target="_blank" title="Loïc Maldonado sur IMDb">
+        Loïc Maldonado</a></strong> (voir aussi <a href="mort.html" target="video" title="Quand j'atais mort"><i>Quand j'étais mort</i></a>) et <strong>Lison Talagrand</strong> dans le cadre de leurs études
         à l'<strong><a href="https://www.univ-montp3.fr/" target="_blank" title="Université Montpellier III">Université
         Montpellier III - Paul Valéry</a></strong>, avec <strong><a href="https://florianroche.com/" target="_blank" title="Florian Roche - Photographe">
         Florian Roche</a></strong> (le même que pour <i><a href="monster.html" target="video" title="Monster">
