--- a/videos/loser.html
+++ b/videos/loser.html
@@ -17,10 +17,10 @@
       <h2>Raphaël Chandelier / Benjamin Pelourson (2011)</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/70r__kAwjxw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p class="film-prez">Il s'agit ici d'un clip de musique <em>électro</em> produit par l'agence
-        web <a href="https://nuut.fr/" target="_blank" title="Nuut.fr">Nuut</a> dans lequel j'ai pu officier en tant que scripte.</p>
-      <p class="film-prez">Au poste de chef-opérateur on trouve aussi <a href="https://florianroche.com/" target="_blank" title="Florian Roche - Photographe">Florian Roche</a>
-        (cf. <a href="monster.html" target="video" title="Monster">Monster</a> &
-        <a href="chroniques.html" target="video" title="Chroniques">Chroniques</a>).</p>
+        web <a href="https://nuut.fr/" target="_blank" title="Nuut.fr"><strong>Nuut</strong></a> dans lequel j'ai pu officier en tant que scripte.</p>
+      <p class="film-prez">Au poste de chef-opérateur on retrouve aussi <a href="https://florianroche.com/" target="_blank" title="Florian Roche - Photographe"><strong>Florian Roche</strong></a>
+        (cf. <a href="monster.html" target="video" title="Monster"><i>Monster</i></a> &
+        <a href="chroniques.html" target="video" title="Chroniques"><i>Chroniques</i></a>).</p>
     </div>
   </body>
 </html>
