--- a/videos/monster.html
+++ b/videos/monster.html
@@ -20,7 +20,7 @@
         le cadre de la filière arts du spectacle-cinéma à l'université <a href="https://www.univ-montp3.fr/" target="_blank" title="Université Montpellier III">
         <strong>Montpellier III - Paul Valéry</strong></a>, il nous a été demandé de réaliser une fausse publicité pour une boisson énergisante.</p>
       <p class="film-prez">Ce court-métrage est une co-réalisation entre mes camarades <strong><a href="http://sebastiencombet.com/" target="_blank" title="Sébastien Combet - Photographe et Réalisateur">
-        Sébastien Combet</a></strong>, <strong><a href="https://florianroche.com/" target="_blank" title="Florian Roche - Photographe">
+        Sébastien Combet</a></strong> (voir aussi son court-métrage <i><a href="fleuraison.html" target="video" title="Fleuraison">Fleuraison</a></i>), <strong><a href="https://florianroche.com/" target="_blank" title="Florian Roche - Photographe">
         Florian Roche</a></strong> (qui joue aussi le zombie et qui apparaît dans <i><a href="chroniques.html" target="video" title="Chroniques">
         Chroniques</a></i>) et moi-même (qui incarne aussi le chamane). Nous avions choisi de partir de la marque <strong>Monster</strong>
         et de la représenter dans un univers <em>horreur/fantasy</em> à la <strong>Lucio Fulci</strong>.</p>
