--- a/videos/fleuraison.html
+++ b/videos/fleuraison.html
@@ -16,8 +16,11 @@
       <h1>Fleuraison</h1>
       <h2>Sébastien Combet (2013)</h2>
       <iframe src="https://player.vimeo.com/video/166490823?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-      <p class="film-prez"></p>
-      <p class="film-prez"></p>
+      <p class="film-prez">C'est un film de fin d'études réalisé par <a><strong>Sébastien Combet</strong></a> (avec qui j'avais déjà travaillé sur <a href="monster.html" target="video" title="Monster"><i>Monster</i></a>) à l'issue
+        de son Master professionnel en cinéma à l'<a><strong>Université de Saint Denis - Paris VIII</strong></a>. Il a
+        entièrement été tourné en pellicule <em>Kodak Super 16mm</em> dans la branche psychiatrie du <a href="https://www.ch-stlaurent.com/" target="_blank" title="Site du Centre hospitalier de Saint Laurent du Pont">centre hospitalier
+        de Saint Laurent du Pont</a> en région Rhône-Alpes (38).</p>
+      <p class="film-prez">J'y ai officié en tant qu'assistant réalisateur ainsi que silhouette parlante dans le rôle du médecin.</p>
     </div>
   </body>
 </html>
