--- a/videos/mort.html
+++ b/videos/mort.html
@@ -16,7 +16,8 @@
       <h1>Quand j'étais mort</h1>
       <h2>Loïc Maldonado (2013)</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/pyJHmUeQtHw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p class="film-prez"></p>
+      <p class="film-prez">Ce court-métrage est parti d'un projet de chaîne <strong><a href="https://www.youtube.com/channel/UC-6oDJyjP3hyRB-4XwoMURw" target="_blank" title="Tribulations sur Youtube">Youtube</a></strong> commune avec <strong><a href="https://www.imdb.com/name/nm8096944/" target="_blank" title="Loïc Maldonado sur IMDb">Loïc
+        Maldonado</a></strong> (cf. <a href="chroniques.html" target="video" title="Chroniques"><i>Chroniques</i></a>) autour de portraits fictifs déclinés autour d'un thème narratif commun.</p>
       <p class="film-prez"></p>
     </div>
   </body>
