--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Corps -->
     <div class="corps">
       <div class="contenu">
-        <h1>if (helloWorld === true) {<br />
+        <h1>if (helloWorld) {<br />
           console.log (curiculumVitae); }</h1>
         <a href="img/portrait.jpg" class="portrait">
           <figure><img src="img/portrait.jpg"></figure>
