Balise h1 mal fermée dans le header

--- a/videos.html
+++ b/videos.html
@@ -32,7 +32,7 @@
       </div>
       <div class="header">
         <a href="index.html" class="logo">
-          <h1>Cinéma<h1>
+          <h1>Cinéma</h1>
           <h2>Tchi tcha ...</h2>
         </a>
       </div>
