Balise h1 mal fermée

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="header">
         <a href="index.html" class="logo">
-          <h1>Simon Tirant<h1>
+          <h1>Simon Tirant</h1>
           <h2>Développeur (sur la ville)</h2>
         </a>
       </div>
